--- a/index.html
+++ b/index.html
@@ -26,7 +26,22 @@
         <button class="log-in">Log In</button>
         <button class="sign-up">Sign up for free</button>
     </div>
-   </nav> 
+   </nav>
+   
+   <nav class="m-nav">
+    <div class="m-left">
+        <img src="assets/getresponse logo.jpeg" alt="getresponse logo"/>
+    </div>
+    <div>
+        <button class="m-signup">Sign up free</button>
+    </div>
+    <div class="m-right">
+        <div>
+            <button class="dash"> <img src="assets/3dash.svg"/></button>
+        </div>
+    </div>
+   </nav>
+
    <div class="all-text">
     <p class="first-text">ALL-IN-ONE MARKETING SOFTWARE</p>
     <p class="second-text">Send emails, automate marketing, <br>
